--- a/P1.ipynb
+++ b/P1.ipynb
@@ -155,9 +155,9 @@
     "    but NOTE: to see the returned image as grayscale\n",
     "    (assuming your grayscaled image is called 'gray')\n",
     "    you should call plt.imshow(gray, cmap='gray')\"\"\"\n",
-    "    return cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
+    "    #return cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
     "    # Or use BGR2GRAY if you read an image with cv2.imread()\n",
-    "    # return cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "    return cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "    \n",
     "def canny(img, low_threshold, high_threshold):\n",
     "    \"\"\"Applies the Canny transform\"\"\"\n",
@@ -212,22 +212,29 @@
     "    \"\"\"\n",
     "    for line in lines:\n",
     "        for x1,y1,x2,y2 in line:\n",
-    "            cv2.line(img, (x1, y1), (x2, y2), color, thickness)\n",
+    "            if x2 != x1:\n",
+    "                theta = np.arctan((y2 - y1) / (x2 - x1)) * 180 / np.pi\n",
+    "                \"\"\"\n",
+    "                theta < 0 - left line\n",
+    "                theta > 0 - right line\n",
+    "                \"\"\"\n",
+    "                if 20. < abs(theta) < 40.:\n",
+    "                    cv2.line(img, (x1, y1), (x2, y2), color, thickness)\n",
     "\n",
-    "def hough_lines(img, rho, theta, threshold, min_line_len, max_line_gap):\n",
+    "def hough_lines(img, ρ, Θ, threshold, min_line_len, max_line_gap):\n",
     "    \"\"\"\n",
     "    `img` should be the output of a Canny transform.\n",
     "        \n",
     "    Returns an image with hough lines drawn.\n",
     "    \"\"\"\n",
-    "    lines = cv2.HoughLinesP(img, rho, theta, threshold, np.array([]), minLineLength=min_line_len, maxLineGap=max_line_gap)\n",
+    "    lines = cv2.HoughLinesP(img, ρ, Θ, threshold, np.array([]), minLineLength=min_line_len, maxLineGap=max_line_gap)\n",
     "    line_img = np.zeros((img.shape[0], img.shape[1], 3), dtype=np.uint8)\n",
     "    draw_lines(line_img, lines)\n",
     "    return line_img\n",
     "\n",
     "# Python 3 has support for cool math symbols.\n",
     "\n",
-    "def weighted_img(img, initial_img, α=0.8, β=1., γ=0.):\n",
+    "def weighted_img(img, initial_img, α = 0.8, β = 1., γ = 0.):\n",
     "    \"\"\"\n",
     "    `img` is the output of the hough_lines(), An image with lines drawn on it.\n",
     "    Should be a blank image (all black) with lines drawn on it.\n",
@@ -289,8 +296,70 @@
    },
    "outputs": [],
    "source": [
+    "def process_image(image):\n",
+    "    # NOTE: The output you return should be a color image (3 channel) for processing video below\n",
+    "    # TODO: put your pipeline here,\n",
+    "    # you should return the final output (image where lines are drawn on lanes)\n",
+    "\n",
+    "    gray = grayscale(image)\n",
+    "\n",
+    "    blur_gray = gaussian_blur(\n",
+    "        img = gray,\n",
+    "        kernel_size = 5)\n",
+    "\n",
+    "    edges = canny(\n",
+    "        img = blur_gray,\n",
+    "        low_threshold = 100,\n",
+    "        high_threshold = 200)\n",
+    "\n",
+    "    imshape = image.shape\n",
+    "\n",
+    "    masked_image = region_of_interest(\n",
+    "        img = edges,\n",
+    "        vertices = np.array([[  (0             ,        imshape[0]      ),\n",
+    "                                (imshape[1] / 2, 1.15 * imshape[0] / 2  ),\n",
+    "                                (imshape[1] / 2, 1.15 * imshape[0] / 2  ),\n",
+    "                                (imshape[1]    ,        imshape[0]      )\n",
+    "                            ]], dtype=np.int32))\n",
+    "\n",
+    "    line_img = hough_lines(\n",
+    "        img = masked_image,\n",
+    "        ρ = 1,\n",
+    "        Θ = np.pi/180,\n",
+    "        threshold = 1,\n",
+    "        min_line_len = 20,\n",
+    "        max_line_gap = 10)\n",
+    "\n",
+    "    lines_edges = weighted_img(\n",
+    "        img = line_img,\n",
+    "        initial_img = image\n",
+    "    )\n",
+    "\n",
+    "    return lines_edges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "# TODO: Build your pipeline that will draw lane lines on the test_images\n",
-    "# then save them to the test_images_output directory."
+    "# then save them to the test_images_output directory.\n",
+    "\n",
+    "test_folder = \"test_images/\"\n",
+    "output_folder = \"test_images_output/\"\n",
+    "\n",
+    "if not os.path.exists(output_folder):\n",
+    "    os.mkdir(output_folder)\n",
+    "    \n",
+    "\n",
+    "for name in os.listdir(test_folder):\n",
+    "    image = cv2.imread(os.path.join(test_folder, name))\n",
+    "    cv2.imwrite(os.path.join(output_folder, name), process_image(image))\n"
    ]
   },
   {
@@ -329,22 +398,6 @@
     "# Import everything needed to edit/save/watch video clips\n",
     "from moviepy.editor import VideoFileClip\n",
     "from IPython.display import HTML"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def process_image(image):\n",
-    "    # NOTE: The output you return should be a color image (3 channel) for processing video below\n",
-    "    # TODO: put your pipeline here,\n",
-    "    # you should return the final output (image where lines are drawn on lanes)\n",
-    "\n",
-    "    return result"
    ]
   },
   {
@@ -417,7 +470,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -519,7 +573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
